--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "HablaConmigo",
-    "short_name": "HablaConmigo",
+    "short_name": "Habla",
     "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#ffffff",
