--- a/manifest.json
+++ b/manifest.json
@@ -6,21 +6,26 @@
   "background_color": "#ffffff",
   "theme_color": "#007bff",
   "description": "Una aplicación de comunicación aumentativa para apoyar la inclusión social de personas no verbales.",
-  "id": "com.hablaconmigo.app",
+  "id": "/?source=pwa",  
   "orientation": "portrait",
   "launch_handler": {
     "client_mode": "auto"
   },
+  "scope": "/",
+  "lang": "es-CL",
+  "dir": "ltr",
   "icons": [
     {
       "src": "/public/logo.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "/public/logo.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     }
   ]
 }
